# directive

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  add_coords.py  analyze_failures.py  analyze_logs.py  config.example.toml  diagnose_supply.py  eval_guderian.py  measure_rail.py  play_campaign.py  print_briefing.py  probe_communique.py  probe_concurrency.py  probe_llm.py  probe_session.py  pyproject.toml  trace_campaign.py  verify_turn.py
.claude/: launch.json
commanders/: briefing.py  campaign.py  communique.py  config.py  dossier.py  intent.py  llm.py  orchestrator.py  prompts.py  records.py  runlog.py  scripted.py
data/: commanders.json  map_agc.json  objectives_1941.json  oob_1941.json
docs/superpowers/plans/: 2026-07-11-commander-morale.md  (+1 more)
engine/: combat.py  fog.py  map.py  movement.py  objectives.py  orders.py  scenario.py  state.py  supply.py  telemetry.py  turn.py  units.py  victory.py  weather.py
server/: app.py
tests/: test_briefing.py  test_campaign.py  test_campaign_session.py  test_combat.py  test_communique.py  test_concurrency.py  test_config.py  test_converse.py  test_determinism.py  test_dossier.py  test_fog.py  test_intent.py  test_llm.py  test_map.py  test_movement.py  test_objectives.py  test_objectives_balance.py  test_orchestrator.py  test_orders.py  test_prompts.py  test_railhead.py  test_records.py  test_reinforcements.py  test_runlog.py  test_scenario.py  test_scripted.py  test_server.py  test_state.py  test_supply.py  test_telemetry.py  test_turn.py  test_units.py  test_victory.py  test_weather.py
web/: app.js  index.html  style.css
(+3 files in other folders)
