[project]
name = "directive"
version = "0.1.0"
description = "Turn-based WW2 strategy game where LLM commanders interpret your directives"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# pyflakes (F) catches unused imports/undefined names; pycodestyle (E), import
# sorting (I), bugbear (B), and pyupgrade (UP) round it out without being noisy.
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length is advisory here, not enforced

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "commanders", "server"]
